main page 반응형 수정
main 하단에 반응형 수정
header부분 수정중

--- a/index.html
+++ b/index.html
@@ -431,7 +431,6 @@
         #container .culture_lab ul {
             display: flex;
             justify-content: space-around;
-            border: 1px solid blue;
             width: 950px;
             margin: 0 auto;
             margin-top: -60px;
@@ -439,7 +438,6 @@
 
         #container .culture_lab ul li {
             width: 33.3333%;
-            border: 1px solid lime;
             float: left;
             box-sizing: border-box;
         }
@@ -820,7 +818,6 @@
             /* 드림 팩토리 */
             #container .dream_factory {
                 flex: none;
-                background: blue;
                 height: 100vw;
             }
 
@@ -983,7 +980,7 @@
 
             /* 커피랩 섹션 */
             #container .coffee_lab {
-                height: 110vw;
+                height: 130vw;
             }
 
             #container .coffee_lab p:nth-child(1) {
@@ -1073,6 +1070,12 @@
             #container .sns .sns_img {
                 width: 100%;
             }
+
+            /* footer */
+            #footer,
+            #footer .footer_info {
+                width: 100%;
+            }
         }
 
         /* 641px 이상 980px이하 */
@@ -1102,7 +1105,6 @@
             /* dream Factory */
             #container .dream_factory {
                 flex: none;
-                background: green;
                 height: 80vw;
                 margin: 0 auto;
             }
@@ -1333,6 +1335,12 @@
             #container .sns .sns_img {
                 width: 100%;
             }
+
+            /* footer */
+            #footer,
+            #footer .footer_info {
+                width: 100%;
+            }
         }
     </style>
 </head>
@@ -1373,41 +1381,41 @@
                 <ul class="gnb">
                     <h2 class="screen_out">이디야 메인 메뉴</h2>
                     <li class="menu_title"><a href="#"><span>메뉴</span></a>
-                        <!-- <ul>
+                        <ul>
                             <li><a href="#">음료</a></li>
                             <li><a href="bakery.html">베이커리</a></li>
                             <li><a href="#">이디야 스낵</a></li>
                             <li><a href="#">MD</a></li>
                             <li><a href="#">비니스트</a></li>
                             <li><a href="bean.html">원두</a></li>
-                        </ul> -->
+                        </ul>
                     </li>
                     <li class="menu_title"><a href="#"><span>이디야멤버스</span></a>
-                        <!-- <ul>
+                        <ul>
                             <li><a href="#">멤버스 소개</a></li>
                             <li><a href="#">이디야카드</a></li>
                             <li><a href="#">선물하기</a></li>
                             <li><a href="#">이디야오더</a></li>
                             <li><a href="#">FAQ</a></li>
-                        </ul> -->
+                        </ul>
                     </li>
                     <li class="menu_title"><a href="#"><span>이디야커피랩</span></a>
-                        <!-- <ul>
+                        <ul>
                             <li><a href="#">이디야커피랩</a></li>
                             <li><a href="#">이디야커피랩 메뉴</a></li>
-                        </ul> -->
+                        </ul>
                     </li>
                     <li class="menu_title"><a href="#"><span>이디야컬쳐랩</span></a>
-                        <!-- <ul>
+                        <ul>
                             <li><a href="musicfesta.html">뮤직페스타</a></li>
                             <li><a href="#">프로그램 및 시설 안내</a></li>
-                        </ul> -->
+                        </ul>
                     </li>
                     <li class="menu_title"><a href="#"><span>이디야 소식</span></a>
-                        <!-- <ul>
+                        <ul>
                             <li><a href="#">공지사항</a></li>
                             <li><a href="#">이벤트</a></li>
-                        </ul> -->
+                        </ul>
                     </li>
                 </ul>
             </div>
